@@ -1,0 +1,2 @@
+Mako python-mako (>= 0.2)
+SQLAlchemy python-sqlalchemy (<< 0.6)
